// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should match its empty snapshot 1`] = `
<span
  className="sc-bdVaJa foXQah k-Tag k-Tag--info"
/>
`;

exports[`<Tag /> should match its snapshot with props 1`] = `
<span
  className="sc-bdVaJa foXQah k-Tag k-Tag--info"
>
  <strong>
    5
  </strong>
   kittens
</span>
`;
